--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="content">
-            <h1>DESIGN YOUR HOUSE</h1>
+            <h1>Redesign Your House</h1>
             <p>Subscribe our channel for more videos, <br>Downloading package 'C/C++ language components      
             </p>
             
